--- a/create-EC2.yml
+++ b/create-EC2.yml
@@ -6,9 +6,9 @@
    tags: provisioning
 
    vars:
-     keypair: mySep22Key
+     keypair: virginia
      instance_type: t2.micro
-     image: ami-0ee23bfc74a881de5
+     image: ami-0889a44b331db0194
      wait: yes
      group: webserver
      count: 1
